--- a/style.css
+++ b/style.css
@@ -23,6 +23,13 @@ body {
 
     background-image: url("img/Background.png");
 }
-.container {
+ .container__botao {
+    background-color: var(--botao-azul);
+    border-radius: 5px;
+    padding: 1em;
+    color: var(--branco-principal);
+    display: block;
+}
+
     height: 100vh;
 }
